# devops-workshops-for-students

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  k8s.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: containerization.yml  lint-code.yml  static-code-analysis.yml  unit-tests.yml
flaskr/: __init__.py  __main__.py  app.py  models.py  routes.py
k8s/: workshop.yaml
tests/: conftest.py  consts.py  test_app.py
