[metadata]
name = flaskr
author = Jeremiasz Macura,Grzegorz Kotarski
author-email = jeremiasz.macura@intel.com,grzegorz.kotarski@intel.com
summary = Sample Flask application for Intel workshop
description-file = README.md
home-page = https://github.com/Jeremiaszmacura/devops-workshops-for-students
requires-dist = setuptools
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Flask
    Topic :: Education

[options]
packages = find:
install_requires = 
    flask
    flask_sqlalchemy
    psycopg2-binary
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest
    pylint
    black

[options.extras_require]
dev =
    pytest
    pylint
    black
    wheel

[options.packages.find]
exclude = tests

[aliases]
test=pytest